test/libhyperion/syntaxTests/conversion/function_type_view_nonpayable.hyp
contract C {
	int dummy;
    function h() view external {
		dummy;
    }
    function f() view external returns (bytes4) {
        function () external g = this.h;
        return g.selector;
    }
}
// ----
// TypeError 4888: (131-153): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
